[package]
name = "opentelemetry-clickhouse-exporter"
version = "0.1.0"
edition = "2024"
description = "An OpenTelemetry trace exporter for ClickHouse using the Rust SDK"
license = "Apache-2.0" # Or your preferred license
repository = "" # Optional: Add your repo URL

[dependencies]
opentelemetry = { version = "0.29.1", features = ["trace"] }
opentelemetry_sdk = { version = "0.29.0", features = ["trace", "rt-tokio"] }
opentelemetry-semantic-conventions = { version = "0.29.0", features = ["semconv_experimental"] }
# Using the CORRECT crate name: clickhouse
clickhouse = { version = "0.13", features = ["lz4", "uuid"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1" # For internal logging within the exporter
url = "2.5"
uuid = { version = "1", features = ["v4"] } # If using UUID type in ClickHouse schema
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3" # Added for BoxFuture

[dev-dependencies]
# Use opentelemetry_api if needed for examples, but opentelemetry itself works too
# opentelemetry_api = { version = "0.22", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15" # To load .env for example DSN